--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,49 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 header,
 main,
 footer {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 header,
 footer {
-  min-height: 15vh;
-  background-color: orangered;
+	min-height: 15vh;
+	background-color: coral;
+	justify-content: center;
 }
 
 main {
-  min-height: 70vh;
-  height: 100%;
-  justify-content: space-around;
+	min-height: 70vh;
+	height: 100%;
+	justify-content: space-around;
 }
 
 .card {
-  background-color: purple;
-  width: 100px;
-  height: 100px;
-  padding: 20px;
+	background-color: salmon;
+	width: 100px;
+	height: 100px;
+	padding: 20px;
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+}
+button,
+form > * {
+	margin-top: 1rem;
+}
+
+label {
+	display: block;
+}
+
+button {
+	width: 100%;
 }
